--- a/Version with the X button not working/index.html
+++ b/Version with the X button not working/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgt5s7d0SxpSDh5Oj1KFfADmm9PesdNF0&libraries=drawing,geometry,places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR API HERE&libraries=drawing,geometry,places"></script>
     <!-- Main JavaScript -->
     <script src="app.js"></script>
 </body>
