--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -251,7 +251,7 @@
 
 </div>
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC84bwUKyNCKTHUu8JI-lHO5zpFE3ORYEM&libraries=drawing,geometry,places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR API KEY HERE&libraries=drawing,geometry,places"></script>
     <!-- Main JavaScript -->
     <script src="app.js"></script>
 </body>
